Introduce gradle 'run' task